--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "build:dev": "npm run build -- --mode=development --watch",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon server.js"
+    "start:dev": "nodemon server.js --ignore dist/ --ignore src/ &npm run build:dev"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +22,10 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-react": "^7.12.10",
+    "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
+    "body-parser": "^1.19.0",
+    "method-override": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.10.0",
