--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "faker": "^5.1.0",
     "nodemon": "^2.0.6",
     "pg": "^8.5.1",
+    "react-router-dom": "^5.2.0",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
@@ -25,7 +26,6 @@
     "@babel/preset-react": "^7.12.10",
     "axios": "^0.21.0",
     "babel-loader": "^8.2.2",
-    "body-parser": "^1.19.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.10.0",
